--- a/css/global.css
+++ b/css/global.css
@@ -2,9 +2,13 @@
 	padding: 50px 10px;
 }
 
+.resources a {
+	margin: 10% 0%;
+}
+
 .download {
 	padding: 10px;
-	margin: 5px;
+	margin: 25px 0px;
 }
 
 a {
