forcing smaller style to one-half-column margin-top

--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -76,7 +76,8 @@
   .one-third.column               { width: 30.6666666667%; }
   .two-thirds.column              { width: 65.3333333333%; }
 
-  .one-half.column                { width: 48%; }
+  .one-half.column                { width: 48%;
+                                    margin-top: 10%!important; }
 
   /* Offsets */
   .offset-by-one.column,
